--- a/app/templates/blog_posts/index.html
+++ b/app/templates/blog_posts/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} 
+{% block title %}Hummingbird | Homepage{% endblock %}
 
 {% block content %}
   {% include "header/header.html" %}
@@ -13,7 +14,7 @@
         <p style="color: tomato;">{{ error }}</p>
       {% endif %}
       <h2 class="home-title">The Hummingbird Blog</h2>
-      <span class="home-subtitle">Your source of great content</span>
+      <span class="home-subtitle">Your source for great content</span>
     </div>
   </section>
   <!--Post Filter-->
@@ -28,8 +29,8 @@
   <ul class="post container">
 
     {% for blog_post in blog_posts_pagination.items %}
-      <li class="post-box">
-        <img src="" alt="" class="post-img" />
+      <li class="post-box {{ blog_post.category }}">
+        <img src="../../static/images/uploads/{{ blog_post.img_url }}" alt="" class="post-img" />
         <h2 class="category">{{ blog_post.category }}</h2>
         <a href="/{{ blog_post.slug }}" class="post-title">
           {{ blog_post.title }} 
@@ -38,14 +39,18 @@
         <p class="post-description">{{ blog_post.description }}</p>
         <!--Profile-->
         <div class="profile">
-          <span class="profile-name">{{ blog_post.author }}</span>
+        {% for user in users%}
+          	{% if user.id == blog_post.author_id %}
+              <span class="profile-name">{{ user.username }}</span>
+            {% endif %}
+        {% endfor %}
         </div>
       </li>
     {% endfor %}
       
   </ul>
     
-  <nav class="filter-item post-filter container">
+  <nav class="move_page next_post container">
     {% if blog_posts_pagination.prev_num %}
       <a href="{{ url_for('blog_posts.index', page=blog_posts_pagination.prev_num) }}">Previous Page</a>
     {% else %}
