--- a/app/templates/footer/footer.html
+++ b/app/templates/footer/footer.html
@@ -2,9 +2,9 @@
 <div class="footer container">
     <p>&#169; Hummingbird All Rights Reserved</p>
     <div class="social">
-        <a href="#"><i class="bx bxl-facebook"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
-        <a href="#"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/"><i class="bx bxl-facebook"></i></a>
+        <a href="https://twitter.com"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.instagram.com"><i class="bx bxl-instagram"></i></a>
+        <a href="https://linkedin.com"><i class="bx bxl-linkedin"></i></a>
     </div>
 </div>
