--- a/app/templates/header/header.html
+++ b/app/templates/header/header.html
@@ -9,7 +9,7 @@
       <a href="{{ url_for('blog_posts.index') }}" class="nav-item">Home</a>
       {% if current_user.is_authenticated %}
         <!--New Post-->
-        <a href="{{ url_for('new_posts.get_new_posts') }}" class="nav-item">New Post</a>
+        <a href="{{ url_for('new_posts.get_new_posts') }}" class="nav-item">New Article</a>
       {% endif %}
     </div>
 
