--- a/app/templates/new_posts/new.html
+++ b/app/templates/new_posts/new.html
@@ -1,37 +1,68 @@
 {% extends "base.html" %} 
+{% block title %}Hummingbird | New Article{% endblock %}
+
 {% block content %}
   {% include "header/header.html" %} 
   
-  <form class="home" method="POST">
-    <h2>New Blog Post</h2>
-    {% if error %}
-      <p style="color: tomato">{{ error }}</p>
-    {% endif %}
-    <div>
-      <label for="title">Title:</label>
-      <input type="text" name="title" id="title" placeholder="Title" />
+  <section class="home">
+    <div class="home-text ">
+      {% if error %}
+        <p style="color: tomato;">{{ error }}</p>
+      {% endif %}
+      <h2 class="home-title">New Article</h2>
+      <span class="home-subtitle">Tell your story</span>
     </div>
-    <div>
-      <label for="category">Category:</label>
-      <input type="text" name="category" id="category" placeholder="Category"">
-    </div>
-    <div>
-      <label for="description">Description:</label>
-      <input type="text" name="description" id="description" placeholder="Description"/>
-    </div>
-    <!-- <div>
-          <label for="image">Image:</label>
-          <input type="image" name="image" id="image">
-      </div> -->
-    <div>
-      <label for="author">Author:</label>
-      <input type="text" name="author" id="author" placeholder="Author"">
-    </div>
-    <div>
-      <label for="text">Text:</label>
-      <input type="text" name="text" id="text" placeholder="Text"">
-    </div>
-    <input type="submit" value="Create Post" />
-  </form>
+  </section>
+
+  <div class="wrapper">
+    <form method="POST" class="form_article" enctype = "multipart/form-data">
+      <div class="input_field">
+        <input type="text" name="title" id="title" placeholder="Title" maxlength="55"/>
+      </div>
+
+      <div class="input_field">
+        <textarea
+          type="text"
+          name="description"
+          id="description"
+          placeholder="Description"
+          class="textarea_description"
+          maxlength="350"
+        ></textarea>
+      </div>
+
+      <div class="input_field">
+        <input
+          type="file"
+          name="file"
+          accept="image/*"
+          id="file"
+        />
+        <label for="file" class="file">
+          <div class="label_text">Choose an Image</div>
+          <i class="material-icons">add_photo_alternate</i>
+        </label>
+      </div>
+
+      <div class="input_field">
+        <div class="custom_select">
+          <select type="text" name="category" id="category">
+            <option value="">Select a Category</option>
+            <option value="design">Design</option>
+            <option value="tech">Tech</option>
+            <option value="mobile">Mobile</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="input_field">
+        <textarea type="text" name="text" id="text" placeholder="Text" class="textarea_text"></textarea>
+      </div>
+
+      <div class="submit_button">
+          <button type="submit" class="button">Post Article</button>
+      </div>
+    </form>
+  </div>
 
 {% endblock %}
