--- a/app/templates/simple_pages/show.html
+++ b/app/templates/simple_pages/show.html
@@ -15,7 +15,7 @@
       {% endif %}
       <!--Title-->
       <h2 class="header-title">{{ blog_post.title }}</h2>
-      <img src="../../new_posts/services/uploads/{{ blog_post.img_url }}" alt="" class="header-img" />
+      <img src="../../static/images/uploads/{{ blog_post.img_url }}" alt="" class="header-img" />
     </div>
   </section>
 
